// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewProductSubscriptionPaymentSection downgrade to existing subscription 1`] = `
<DocumentFragment>
  <div
    class="new-product-subscription-payment-section"
  >
    <div
      class="form-text mb-2"
    >
      <ul
        class="pl-3 mb-2"
      >
        <li>
          Increase user count from 123 to 456.
        </li>
        <li>
          Prorated for remainder of subscription (through 
          <span>
            <span
              title="Jan 1, 2021, 12:00:00 AM"
            >
              2021-01-01
            </span>
          </span>
          ).
        </li>
      </ul>
      <div
        aria-live="assertive"
        class="mb-2"
        role="alert"
      >
        Self-service downgrades are not yet supported. 
        <a
          class=""
          href="mailto:sales@sourcegraph.com?subject=Downgrade%20subscription%20s"
        >
          Contact sales
        </a>
         for help.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewProductSubscriptionPaymentSection new subscription 1`] = `
<DocumentFragment>
  <div
    class="new-product-subscription-payment-section"
  >
    <div
      class="form-text mb-2"
    >
      Total: $123.45 for 14 years (123 users)
      <div
        class="iconInline loadingSpinner invisible"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewProductSubscriptionPaymentSection no change to existing subscription 1`] = `
<DocumentFragment>
  <div
    class="new-product-subscription-payment-section"
  >
    <div
      class="form-text mb-2"
    >
      <div
        class="text-muted mb-2"
      >
        No changes to subscription.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewProductSubscriptionPaymentSection valid change to existing subscription 1`] = `
<DocumentFragment>
  <div
    class="new-product-subscription-payment-section"
  >
    <div
      class="form-text mb-2"
    >
      <ul
        class="pl-3 mb-2"
      >
        <li>
          Increase user count from 123 to 456.
        </li>
        <li>
          Prorated for remainder of subscription (through 
          <span>
            <span
              title="Jan 1, 2021, 12:00:00 AM"
            >
              2021-01-01
            </span>
          </span>
          ).
        </li>
      </ul>
      <div
        class="mb-2"
      >
        Amount due: $234.56
      </div>
    </div>
  </div>
</DocumentFragment>
`;
